<resources>
    <string name="app_name">BarcodeSample1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_scanner">Select Scanner:</string>
    <string name="select_decoders">Select Decoders:</string>
    <string name="ean8">EAN8</string>
    <string name="code39">Code39</string>
    <string name="ean13">EAN13</string>
    <string name="code128">Code128</string>
    <string name="scan">Scan</string>
    <string name="status">Status:</string>
    <string name="data">Data:</string>
    <string name="landscape_select_decoders">Select Decoders:</string>
    <string name="landscape_ean8">EAN8</string>
    <string name="landscape_ean13">EAN13</string>
    <string name="landscape_code39">Code39</string>
    <string name="landscape_code128">Code128</string>
    <string name="landscape_scan">Scan</string>
    <string name="landscape_status">Status:</string>
    <string name="landscape_data">Data:</string>
    <string name="landscape_select_scanner">Select Scanner:</string>
</resources>
