<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.symbol.barcodesample1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textViewSS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_scanner" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinnerScannerDevices"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />
            </TableRow>


        <TextView
            android:id="@+id/textViewSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_decoders" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBoxEAN8"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/ean8" />

                <CheckBox
                    android:id="@+id/checkBoxEAN13"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/ean13" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBoxCode39"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/code39" />

                <CheckBox
                    android:id="@+id/checkBoxCode128"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:text="@string/code128" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:onClick="softScan"
            android:text="@string/scan" />

        <TextView
            android:id="@+id/textViewS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <ScrollView
            android:id="@+id/scrollViewData"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>