<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.symbol.barcodesample1.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="303dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="302dp"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewSS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/landscape_select_scanner" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinnerScannerDevices"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewSD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/landscape_select_decoders" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                 <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/checkBoxEAN8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/landscape_ean8" />

                            <CheckBox
                                android:id="@+id/checkBoxEAN13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/landscape_ean13" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <CheckBox
                                android:id="@+id/checkBoxCode39"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/landscape_code39" />

                            <CheckBox
                                android:id="@+id/checkBoxCode128"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/landscape_code128" />
                        </TableRow>
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="softScan"
                android:text="@string/landscape_scan" />

            <TextView
                android:id="@+id/textViewS"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:text="@string/landscape_status" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="302dp"
                android:layout_height="52dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landscape_data" />

            <ScrollView
                android:id="@+id/scrollViewData"
                android:layout_width="match_parent"
                android:layout_height="237dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>